# xtream-ai-assignment-engineer

./: README-kedro.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst
notebooks/: automl.ipynb
notebooks/autogluon_models/: learner.pkl  metadata.json  predictor.pkl
notebooks/autogluon_models/models/: NeuralNetFastAImodel-internals.pkl  trainer.pkl
notebooks/autogluon_models/models/CatBoost/: model.pkl
notebooks/autogluon_models/models/FTTransformer/: model.pkl
notebooks/autogluon_models/models/Figs/: model.pkl
notebooks/autogluon_models/models/Figs_2/: model.pkl
notebooks/autogluon_models/models/Figs_3/: model.pkl
notebooks/autogluon_models/models/KNeighbors/: model.pkl
notebooks/autogluon_models/models/KNeighborsDist/: model.pkl
notebooks/autogluon_models/models/KNeighborsUnif/: model.pkl
notebooks/autogluon_models/models/LightGBM/: model.pkl
notebooks/autogluon_models/models/LightGBMLarge/: model.pkl
notebooks/autogluon_models/models/LightGBMXT/: model.pkl
notebooks/autogluon_models/models/LinearModel/: model.pkl
notebooks/autogluon_models/models/NeuralNetFastAI/: model.pkl
notebooks/autogluon_models/models/NeuralNetTorch/: model.pkl
notebooks/autogluon_models/models/RuleFit/: model.pkl
notebooks/autogluon_models/models/RuleFit_2/: model.pkl
notebooks/autogluon_models/models/RuleFit_3/: model.pkl
notebooks/autogluon_models/models/WeightedEnsemble_L2/: model.pkl
notebooks/autogluon_models/models/XGBoost/: model.pkl  (+1 more)
src/xtream_ai_assignment/: __init__.py  __main__.py
src/xtream_kedro/: __init__.py  __main__.py
(+31 files in other folders)
